# pddebug

./: LICENSE  README.md  regex-deriv-debug.cabal
Text/Regex/PDeriv/Debug/: Refine.hs  Refine10.hs  Refine2.hs  Refine3.hs  Refine4.hs  Refine5.hs  Refine6.hs  Refine7.hs  Refine8.hs  Refine9.hs  Report.hs
data/: hwz.html
reference/: rebug.txt
sandbox/: .#PDRefinement.lhs  PDDebug.lhs  PDRefinement  PDRefinement.lhs  PDRefinement.lhs~  PDRefinement.prof  PDRefinement2.lhs  PDRefinement3.lhs  Refinement.lhs  input.xml
test/: File.hs  Main.hs  hwz-large.html  hwz-small.html  hwz-tiny.html
