Name:                   regex-derive-debug
Version:                0.0.1
License:                BSD3
License-File:           LICENSE
Copyright:              Copyright (c) 2010-2012, Kenny Zhuo Ming Lu and Martin Sulzmann
Author:                 Kenny Zhuo Ming Lu and Martin Sulzmann
Maintainer:             luzhuomi@gmail.com, martin.sulzmann@gmail.com
Stability:              Beta
Homepage:               http://code.google.com/p/xhaskell-library/
Package-URL:            http://darcs.haskell.org/packages/regex-unstable/xhaskell-library
Synopsis:               Regular expression Debugging Tools Using Derivatives and Partial Derivatives. 
Description:  
Category:               Text
Tested-With:            GHC
Build-Type:             Simple
Cabal-Version:          >= 1.2.3

flag base4

library 
  Build-Depends:        regex-base >= 0.93.1, parsec, mtl, containers, bytestring, deepseq
  Build-Depends:	bitset, parallel, regex-pderiv
  Build-Depends:         base >= 4.0 && < 5.0, ghc-prim
  Exposed-Modules:       Text.Regex.PDeriv.Debug.Report
                         Text.Regex.PDeriv.Debug.Refine
                         Text.Regex.PDeriv.Debug.Refine2
                         Text.Regex.PDeriv.Debug.Refine3
                         Text.Regex.PDeriv.Debug.Refine4
                         Text.Regex.PDeriv.Debug.Refine5
                         Text.Regex.PDeriv.Debug.Refine6
                         Text.Regex.PDeriv.Debug.Refine7
  Buildable:              True
  Extensions:             GADTs, MultiParamTypeClasses, FunctionalDependencies, FlexibleInstances, TypeSynonymInstances, FlexibleContexts
  GHC-Options:            -threaded -funbox-strict-fields
  GHC-Prof-Options:       -auto-all

